# MyTail

./: .gitignore  CMakeLists.txt  Makefile
include/: args.h  parsing.h  tail.h
src/: args.c  main.c  parsing.c  tail.c  tail_file.c
